Spell check pass

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
@@ -38,7 +38,7 @@
        <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
        <a href="../concepts/clocdbug.htm">Local debugging</a><br>
        <a href="../tasks/tasks-133.htm">Preparing to debug</a><br>
-       <a href="../tasks/tasks-131.htm">Relaunching a program</a><br>
+       <a href="../tasks/tasks-131.htm">Re-launching a program</a><br>
        <a href="../concepts/cremdbug.htm">Remote debugging</a><br>
        <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
        <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
