--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -5,12 +5,12 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <title>
-      Relaunching a program
+      Re-launching a program
     </title>
   </head>
   <body>
     <h1>
-      Relaunching a program
+      Re-launching a program
     </h1>
     <p>
       The workbench keeps a history of each launched and debugged program. To
