--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -21,7 +21,7 @@
   <li>Select one or more parameters and use the <strong>Up</strong> and <strong>Down</strong> 
     buttons to reorder the parameters (you can see a signature preview below the 
     parameter list) </li>
-  <li>Use the <b>Add</b> button to add a paremeter; you can then edit its type, 
+  <li>Use the <b>Add</b> button to add a parameter; you can then edit its type, 
     name and default value in the table</li>
   <li> Press <strong>Preview</strong> to see the preview or <strong>OK</strong> 
     to perform the refactoring without seeing the preview </li>
