--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-216.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-216.htm
@@ -4,13 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>
-      Converting an anonynous inner class to a nested class
+      Converting an anonymous inner class to a nested class
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
   <body>
-<h1> Converting an anonynous inner class to a nested class</h1>
-To convert an anonynous inner class to a nested class: 
+<h1> Converting an anonymous inner class to a nested class</h1>
+To convert an anonymous inner class to a nested class: 
 <ul>
   <li> In a Java editor, position the care inside the anonymous class</li>
   <li> Do one of the following: 
