--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-219.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-219.htm
@@ -10,7 +10,7 @@
   </head>
   <body>
 <h1> Replacing references to a type with references to one of its subtypes</h1>
-To replace refreces to a type with references to one of its subtypes: 
+To replace references to a type with references to one of its subtypes: 
 <ul>
   <li> In a Java editor or a Java view, select the type</li>
   <li> Do one of the following: 
