--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-221.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-221.htm
@@ -14,7 +14,7 @@
       Creating a new source folder with exclusion filter
     </h1>
     In a project that uses source folders, you can create a new folder to contain Java source code with exclusion patterns. Exclusion
-    patterns are usefull if you have nested source folders. There are two ways to do it:
+    patterns are useful if you have nested source folders. There are two ways to do it:
     <ol>
     	<li>You don't already have an existing Java project in which you want to create a source folder with exclusion pattern.</li>
     	<li>You already have an existing Java project.</li>
