--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
@@ -25,7 +25,7 @@
     (public, default, protected, or private). </li>
   <li> You can <strong>Add thrown runtime exceptions to method signature</strong> 
     by selecting the corresponding checkbox. </li>
-  <li>You can rearrange and rename the pararameters for the new method.</li>
+  <li>You can rearrange and rename the parameters for the new method.</li>
   <li> Click <strong>OK</strong> to perform a quick refactoring, or click <strong>Preview</strong> 
     to perform a controlled refactoring. </li>
 </ul>
