--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -154,7 +154,7 @@
 			(Ctrl+Space)</b> in the type body at the location where the method
 			should be added. Content assist will offer all methods that can be
    			overridden. A method body for the chosen method will be created.
-			<p><img src="images/code-assist-newmethod.gif" width=444 height=98 border="0" alt="'Overrride method' content assist"></p>
+			<p><img src="images/code-assist-newmethod.gif" width=444 height=98 border="0" alt="'Override method' content assist"></p>
 </td>
 		</tr>
 		<tr>
@@ -459,11 +459,11 @@
 			endings in Open and Go To dialogs</b></td>
 			<td valign="top" align="left" width="80%"><b>Open</b> and <b>Go To</b>
 			dialogs now support the end character '&lt;'. To see all types in the
-			<b>Open Type</b> dialog that end with "Test" enter the pattern
-			"*Test&lt;". <br>
+			<b>Open Type</b> dialog that end with &quot;Test&quot; enter the pattern
+			&quot;*Test&lt;&quot;. <br>
 			If '&lt;' is not included in the pattern, a '*' will be appended to
 			the pattern. If you enter "*Test" in the <b>Open Type</b> dialog you
-			will see all types containing "Test" somewhere in the type name.</td>
+			will see all types containing &quot;Test&quot; somewhere in the type name.</td>
 		</tr>
 		<tr>
    <td width="20%" valign="top" align="right"><b> Make hovers sticky</b></td>
@@ -566,9 +566,9 @@
 			<td valign="top" align="left" width="80%">An option on the Java
 			Packages view (and Package Explorer view) allows you to change the
 			way packages are displayed. <b>Hierarchical</b> displays packages in
-			a tree, with subpackages below packages; <b>Flat</b> displays them in
+			a tree, with sub-packages below packages; <b>Flat</b> displays them in
 			the standard arrangement, as a flat list with all packages and
-			subpackages as siblings.<br>
+			sub-packages as siblings.<br>
 			<table border="0">
 				<tbody>
 					<tr align="left" valign="top">
@@ -624,11 +624,10 @@
       while running them and this icon <img src="images/junitsucc.gif" width="16" height="16" alt="Successfully finished"> 
       after they are finished. If, however, errors or failures occur, the icon 
 		      will change to <img src="images/ff4.gif" width="16" height="16" alt="Failure or error occurred"> 
-      (or <img src="images/juniterr.gif" width="16" height="16" alt="Fisihed with failure or error"> 
+      (or <img src="images/juniterr.gif" width="16" height="16" alt="Finished with failure or error"> 
       if tests are finished) and the JUnit view will appear. This behavior can 
       be configured via the <b>Java > JUnit </b>preference page.</td>
 		</tr>
-
 	<tr>
 		<td valign="top" align="right">
 			<b>Structural compare of Java source</b>
@@ -700,7 +699,7 @@
 			settings on the <b>Java &gt; Code Generation</b> preference page are
 			used in content assist, quick fix, and refactoring whenever a
 			variable name needs to be computed.
-			<p><img src="images/name-conventions.gif" width=405 height=161 border="0" alt="Name convensions in the code generation preference page"></p>
+			<p><img src="images/name-conventions.gif" width=405 height=161 border="0" alt="Name conventions in the code generation preference page"></p>
 </td>
 		</tr>
 		<tr>
