--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -65,7 +65,7 @@
       Consistent with other search commands, markers are generated and presented 
       as annotations in the editor. Entries in the Search Results view have different 
       icons for read and write access. In this example you see the search results 
-      for "fName" in "TestCase.java". 
+      for &quot;fName&quot; in &quot;TestCase.java&quot;. 
       <P align=center><img src="images/search.gif" width=321 height=344 alt="Editor and Search view showing occurrences of a field in a file"></P>
 	</td>
   </tr>
@@ -405,7 +405,7 @@
         <LI>Exclusion filters let you exclude certain 
           source files within a source folder from being compiled.
         <LI>Source folders can now be nested - use an exclusion filter on the 
-          parent folder to exclude the subfolder you wish to add to the build 
+          parent folder to exclude the sub-folder you wish to add to the build 
           path. 
         <LI>The location of generated class files can 
           be set individually for each source folder.</LI>
@@ -509,9 +509,9 @@
     <TD>
       <p>An option on the Java Packages view (and the Package Explorer view) allows 
         you to change the way packages are displayed. <B>Hierarchical</B> displays 
-        packages in a tree, with subpackages below packages; <B>Flat</B> displays 
+        packages in a tree, with sub-packages below packages; <B>Flat</B> displays 
         them in the standard arrangement, as a flat list where all packages and 
-        subpackages are siblings. Below is an example of the hierarchical layout:</p>
+        sub-packages are siblings. Below is an example of the hierarchical layout:</p>
       <p><img src="images/hierarchical_layout.gif" alt="Hierarchical layout in Package Explorer" width="329" height="220"> </p>
     </TD></TR>
   <TR>
