--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130a.htm
@@ -41,7 +41,7 @@
     </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-       <a href="../tasks/tasks-131.htm">Relaunching a program</a><br>
+       <a href="../tasks/tasks-131.htm">Re-launching a program</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
     </p>
