--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>
-      Inlining a metod
+      Inlining a method
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
@@ -21,10 +21,10 @@
         <ul>
           
       <li> From the menu bar, select <strong>Refactor &gt; Inline</strong> or 
-      </li>
+          </li>
           
       <li> From the editor's pop-up menu, select <strong>Refactor &gt; Inline</strong> 
-      </li>
+          </li>
         </ul>
       </li>
     </ul>
