--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -51,7 +51,7 @@
   <a href="tasks-167.htm">Moving static members between types</a><br>
   <a href="tasks-210.htm">Moving an instance method to a component</a><br>
   <a href="tasks-211.htm">Converting a local variable to a field</a><br>
-  <a href="tasks-216.htm">Converting an anonynous inner class to a nested class</a><br>
+  <a href="tasks-216.htm">Converting an anonymous inner class to a nested class</a><br>
   <a href="tasks-217.htm">Converting a nested type to a top level type</a><br>
   <a href="tasks-218.htm">Extracting an interface from a type</a><br>
   <a href="tasks-219.htm">Replacing references to a type with references to one of its subtypes</a><br>
