--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
@@ -49,7 +49,7 @@
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Java Remote Application launcher</a><br>
-       <a href="../tasks/tasks-131.htm">Relaunching a program</a><br>
+       <a href="../tasks/tasks-131.htm">Re-launching a program</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
        <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
