Inegrated review from DJ Houghton

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -31,14 +31,14 @@ semantic behavior. </p>
     </p>
     </li>
   <li> Select the <em>MyTestCase.java</em> file and drag it into the root 
-    directory of the JUnit project. Once again, you will be prompted to decide
-    how to handle updates to the references to the file. You may <strong>Preview</strong>
-    a list of these changes or you may press <strong>OK </strong>to complete the
-    change without previewing. After you have pressed <strong>OK </strong>(or
+    directory of the JUnit project. Once again, a dialog pops up letting the user decide to preview the changes. After you have pressed <strong>OK </strong>(or
     <strong>Finish </strong>from the preview window), a default package is created to contain the 
     class, and the package declaration is removed to reflect the file's location
     in the default package. 
-    <p> <img src="../images/qs-45.gif" width=530 height=181 alt="File moved to default package"> 
+    If you move a file  to a default package the system additionally pops up a warning dialog, 
+    informing the user about reference updates when moving to the default package. If you 
+    don't want to see the dialog everytime you move a file to the default package, check the 
+    <strong>Don't show this message again</strong> checkbox.<p> <img src="../images/qs-45.gif" width=530 height=181 alt="File moved to default package"> 
     </p>
   </li>
   </ol>
