--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -86,7 +86,7 @@ you to find matches inside comments and strings.
 </ol>
 <h2> Viewing previous search results </h2>
 <p> In the Search Results view, click the arrow next to the<strong> Previous 
-  Search Results</strong> button to see a menu containing the list of the most 
+  Search Results</strong> toolbar button to see a menu containing the list of the most 
   recent searches. You can choose items from this menu to view previous
 searches.&nbsp; The list can be cleared by choosing <strong>Clear History</strong>. 
 </p>
