--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -62,7 +62,7 @@
       <li>
         In the Package Explorer view, expand the JUnit project to view the JUnit packages.
 		<p>
-		<img src="../images/qs-6.gif" width=209 height=326 alt="Package explorer">
+		<img src="../images/qs-6.gif" alt="Package explorer">
 		</p>
       </li>
     </ol>
