--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -28,7 +28,7 @@
         The import declaration, the public type, and its members (fields and
         methods) appear in the tree.
         <p>
-            <img src="../images/qs-7.gif" width=249 height=585 alt="Package explorer"> 
+            <img src="../images/qs-7.gif" alt="Package explorer"> 
         </p>
       </li>
     </ol>
