--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -65,10 +65,8 @@ classes and members in a variety of different ways. </p>
     <img src="../images/qs-33.gif" width=244 height=447 alt="Supertype hierarchy showing method implementors"> 
 	</p>
   </li>
-  <li> In the Hierarchy view select the Test element and select <strong>Focus 
-    On 'Test'</strong> from its context menu. The resource containing 
-    the selected element is represented in the Hierarchy view and also opens in 
-    an active editor. </li>
+  <li> In the Hierarchy view select the <em>Test</em> element and select <strong>Focus 
+    On 'Test'</strong> from its context menu. <em>Test</em> is presented in the Hierarchy view. </li>
   <li> Activate the Package Explorer view and select the package junit.framework. 
     Use <strong>Open Type Hierarchy</strong> from its context menu. A hierarchy 
     is opened containing all classes of the package. For completion of the tree, 
