--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Browsing.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-Browsing.htm
@@ -42,7 +42,7 @@
         </li>
         <li>
           The <strong>Members</strong> view shows the members of a selected type. Functionally,
-          the <strong>Members</strong> view is comparable to the <strong>Outliner</strong> used in the normal Java
+          the <strong>Members</strong> view is comparable to the <strong>Outline</strong> view used in the normal Java
           perspective.
         </li>
         <li>
