--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ContentAssist.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ContentAssist.htm
@@ -13,7 +13,7 @@
       Using content assist
     </h1>
     <p>
-      In this section you will use content assist to finish writing a new
+      In this section you will use <em>content assist</em> to finish writing a new
       method. Open <em>junit.samples.VectorTest.java</em> file in the Java
       editor if you do not already have it open and select the <code>testSizeIsThree()</code> method
       in the Outline view. If the file doesn't contain such a method see <a href="qs-AddMethod.htm">Adding new methods</a>
