--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
@@ -65,6 +65,10 @@
       </li>
       <li>
         In the Local History pane, select the earlier version and then click <strong>Restore</strong>.
+      </li>
+      <li>
+        Press <strong>Ctrl+S</strong> to save the file.
+      </li>
     </ol>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
