--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-AddMethod.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-AddMethod.htm
@@ -16,19 +16,19 @@
       <li>
         Start adding a method by typing the following at the end of the <em>VectorTest.java</em> file (but before the closing 
         brackets of the type) in the Java editor:<br>
-        <code>public void testSizeIsThree() {</code><br>
+        <code>public void testSizeIsThree()</code><br>
 		As soon as you type the method name in the editor area, the new method appears at the bottom of the Outline view. 
 		<p>
 		<img src="../images/qs-13.gif" width=506 height=291 alt="New method in outline view">
 		</p>
 		In addition, an error annotation (red square) appears in the overview ruler positioned on the right hand side 
 		of the editor. This error annotation indicates that the compilation unit is currently not correct. If you hover
-		over the red square a tool tip appears, <em>Unmatched bracket</em>, which is correct since we entered
-		an opening curly bracket without the corresponding closing bracket. Note that error annotations in the editor's
-		rulers are updated as you type. This behaviour can be controlled via the preference page <strong>Java &gt; 
+		over the red square a tool tip appears, <em>Unmatched bracket</em>; <em>Syntax error on token &quot;}&quot;, 
+		&quot;{&quot; expected</em>, which is correct since the method doesn't have a body yet. Note that error 
+		annotations in the editor's rulers are updated as you type. This behavior can be controlled via the preference page <strong>Java &gt; 
 		Editor &gt; Annotations</strong>.
 		<p>
-		<img src="../images/qs-13a.gif" width=528 height=232 alt="Error annotations in overview ruler">
+		<img src="../images/qs-13a.gif" alt="Error annotations in overview ruler">
 		</p>
 		
       </li>
@@ -37,15 +37,16 @@
         Package Explorer view, in the Tasks view and on the vertical ruler (left hand side of the editor). In the Package 
         Explorer view, the errors are propagated up to the project of the compilation unit containing the error.
 		<p>
-		<img src="../images/qs-14.gif" width=238 height=349 alt="Error propagation in package explorer">
+		<img src="../images/qs-14.gif" alt="Error propagation in package explorer">
 		</p>
       </li>
       <li>
         Complete the new method by typing the following:<br>
-        <code>
+        <p><code>
+          {<br>
           &nbsp; assertTrue(fFull.size() == 3);<br>
-          }<br>
-        </code>
+        </code></p>
+        Note, that the closing curly bracket has been auto inserted.
       </li>
       <li>
         Save the file. Notice that the error indicators disappear since the
