*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -177,9 +177,7 @@
       of the element at the current cursor position. Or press Ctrl+O (<B>Edit 
       &gt; Open Structure</B>) to pop up an in-place outline of the current source 
       file. 
-      <P align=center><IMG height=291 
-      alt="In-place Outline" src="images/inplace_outline.gif" 
-      width=365 border=0></P>
+      <P align=center><img src="images/inplace_outline.gif" width=453 height=282 border="0" alt="Inplace outline"></P>
 	</td>
   </tr>
   <tr>
@@ -497,7 +495,7 @@
       presented in the Package Explorer view. A filter is provided to filter out 
       non-Java projects, and the open/close interaction is now consistent with 
       the resource Navigator view. 
-      <P><img src="images/package-explorer.gif" width=155 height=99 alt="Non-Java projects in Package Explorer" border=0></P>
+      <P><img src="images/package-explorer.gif" width="206" height="93" alt="Non-Java projects in Package Explorer"></P>
       <P>Libraries (such as the JRE system library) 
         are now presented as a single node with one or more JARs as children. 
       </P>
@@ -532,7 +530,7 @@
       you sort the selected type's methods by its defining types. For example, 
       for <code>AbstractList</code> you can see that it contains methods that were 
       defined in <code>Object</code>, <code>Collection</code>, and <code>List</code>: 
-      <P align=center><img src="images/sort-by-def.gif" width=466 height=351 alt="Type Hierarchy view" border=0></P></TD></TR>
+      <P align=center><img src="images/sort-by-def.gif" width=422 height=263 border="0" alt="Sort members by the defining type in the type hierarchy"></P></TD></TR>
   <TR>
     <TD>
       <P><B>More filters for the Package Explorer and Project views</B> </P>
