*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-166.htm
@@ -20,7 +20,9 @@
 </p>
 <ul>
   <li>Select the destination class</li>
-  <li>In the list, select the member that you want to pull up or declare abstract</li>
+  <li>In the list, select the members that you want to pull up or declare abstract</li>
+  <li>Press the Edit button to specify the action that you want to perform for 
+    the selected members (you can also edit the table cells in-place.)</li>
   <li> Press <strong>Next</strong> to see the next page or press <strong>Finish</strong> 
     to perform the refactoring</li>
 </ul>
