--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -37,8 +37,8 @@
 		</tr>
 		<tr>
 			
-    <td width="20%" valign="top" align="right"><b>Content assist for variable/field 
-      name completions</b></td>
+    <td width="20%" valign="top" align="right"><b>Content assist for variable, 
+      method parameter and field name completions</b></td>
 			
     <td valign="top" align="left" width="80%">
       <p>You can use content assist to speed up creation of fields, method parameters 
