--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -25,15 +25,10 @@
       <strong>Note</strong>: You can use drag-and-drop to move resources between different workbench windows. Select a resource you want to move, and drag-and-drop it onto the
       desired destination. If you want to copy rather than move, hold the <strong>Ctrl</strong> key down while dragging.
     </p>
-    <p>
-      You can also use drag-and-drop to copy resources between the workbench and the desktop (both ways), but you cannot move files from the desktop to the workbench using
-      drag-and-drop.
-    </p>
-    <p>
-      Moving compilation units updates only package declarations; it does not update references to the classes declared in those compilation units. This can result in compilation
-      errors. If you use the <strong>Refactor</strong> &gt; <strong>Move</strong> command from the selected resource's pop-up menu, all references to classes defined in the
-      selected compilation units will be updated.
-    </p>
+    
+<p> You can also use drag-and-drop to copy resources between the workbench and 
+  the desktop (both ways), but you cannot move files from the desktop to the workbench 
+  using drag-and-drop. </p>
     <p>
        <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
