Spell check pass

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -66,10 +66,10 @@ source files in large projects, and may only be referenced within the containing
 <b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#newSourceEntry(org.eclipse.core.runtime.IPath)">newSourceEntry</a></b>.
 Inside a given source folder, each compilation unit is expected to be nested in the appropriate folder structure according to its package
   statement.&nbsp; For example, compilation unit 'X.java' in package 'p1' 
-must be located inside subfolder 'p1' of a source folder.
+must be located inside sub-folder 'p1' of a source folder.
 It is possible to use multiple source folders, as long as they don't overlap. A
   source folder may be assigned its own output location which determines where
-  generated classfiles should be placed.&nbsp; If none is specified, then class
+  generated class files should be placed.&nbsp; If none is specified, then class
   files will be placed in the containing project's output location
   (see <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setOutputLocation(org.eclipse.core.runtime.IPath, org.eclipse.core.runtime.IProgressMonitor)">IJavaProject.setOutputLocation</a></b>).<P>The
   following is an example classpath entry that denotes the source folder 'src' of project
