--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
@@ -12,7 +12,7 @@
 <H2>
 Performing code assist on Java code</H2>
 <P>
-The JDT API allows other plugins to perform code assist or code select on some Java elements. 
+The JDT API allows other plug-ins to perform code assist or code select on some Java elements. 
 Elements that allow this manipulation should implement <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html"> ICodeAssist</a></b>.&nbsp;
 <P>
 There are two kinds of manipulation:
@@ -23,7 +23,7 @@ There are two kinds of manipulation:
 </ul>
 <p>
 In the Java model there are two elements that implement this interface: <b><a href="../reference/api/org/eclipse/jdt/core/IClassFile.html"> IClassFile</a></b> and <b><a href="../reference/api/org/eclipse/jdt/core/ICompilationUnit.html"> ICompilationUnit</a></b>.&nbsp;
-Code completion and code selection only answer results for a classfile if it has attached source.</p>
+Code completion and code selection only answer results for a class file if it has attached source.</p>
 <H3>
 Code completion</h3>
 
@@ -61,7 +61,7 @@ of completions including the insertion of the following elements:</P>
 </ul>
 <p>The completion requestor must also be able to accept compilation
 errors.&nbsp;&nbsp;</p>
-<p>If your plugin is not interested in every kind of code completion, a <b><a href="../reference/api/org/eclipse/jdt/core/CompletionRequestorAdapter.html">CompletionRequestorAdapter</a></b>
+<p>If your plug-in is not interested in every kind of code completion, a <b><a href="../reference/api/org/eclipse/jdt/core/CompletionRequestorAdapter.html">CompletionRequestorAdapter</a></b>
 can be used so that you need only implement the kinds of completions you are
 interested in.&nbsp; The following example shows an adapter that is only used to
 accept class completions.</p>
@@ -107,8 +107,8 @@ Code completion options
 </h4>
 
 <P>
-The JDT Core plugin defines options that control the behavior of code
-completion.&nbsp; These options can be changed by other plugins.&nbsp;&nbsp;</P>
+The JDT Core plug-in defines options that control the behavior of code
+completion.&nbsp; These options can be changed by other plug-ins.&nbsp;&nbsp;</P>
 <ul>
 <li>Activate Visibility Sensitive Completion<br>
   When this option is active, code completion will not answer elements that are
@@ -135,7 +135,7 @@ Performing a code selection
 <P>Code selection is used to find the Java element represented by a range of
 text (typically the selected text) in a compilation unit.&nbsp; To programmatically perform code selection,
 you must invoke <b><a href="../reference/api/org/eclipse/jdt/core/ICodeAssist.html#codeSelect(int, int)">ICodeAssist.codeSelect</a></b>.
-You must supply the starting index location of hte selection and its
+You must supply the starting index location of the selection and its
 length.&nbsp; The result is an array of Java elements.&nbsp; Most of the time there is only one element in the array, but if the selection is ambiguous then all the possible elements are returned.<P>In
 the following example, code select is invoked for a compilation unit.
 
