JaneQUser -> JaneQuser (fixed capitalization)

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
@@ -33,11 +33,11 @@ drop the resource into will be selected.</P>
   </blockquote>
 </blockquote>
 <P CLASS="Para">
-Drag the file over JaneQUser2 and release the mouse button.</P>
+Drag the file over JaneQuser2 and release the mouse button.</P>
   </li>
   <li>
 <P CLASS="Para">
-Notice that the file is copied into the Workbench and placed into JaneQUser2.</P>
+Notice that the file is copied into the Workbench and placed into JaneQuser2.</P>
   </li>
   <li>This can also be achieved by copying the file in the file system explorer,
 then selecting the destination in the Navigator and choosing <b>Edit &gt; Paste</b>.
