--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -53,7 +53,7 @@ files in the folder will be imported into the Workbench.</P>
 <P CLASS="Para">You can change the destination project or folder by clicking
 <b>Browse</b>; </P>
 <P CLASS="Para">Click the <b>Browse</b> button and choose our second project
-JaneQUser2.&nbsp; </P>
+JaneQuser2.&nbsp; </P>
 <blockquote>
   <blockquote>
 <P CLASS="Para">
@@ -74,7 +74,7 @@ Create complete folder structure or Create selected folders only</LI>
   <li>
 <P CLASS="Para">
 Click <b>Finish</b> when you are done. The file JaneINIFile.ini is now shown in the
-Navigator in the project JaneQUser2.</P>
+Navigator in the project JaneQuser2.</P>
   </li>
 </ol>
 <P>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
