--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
@@ -11,10 +11,10 @@
 <h2>
 Deleting resources</h2>
 <P CLASS="Para">Now that we have imported a few files into our second
-project (JaneQUser2) we will see how easy it is to delete the project.&nbsp;</P>
+project (JaneQuser2) we will see how easy it is to delete the project.&nbsp;</P>
 <ol>
   <li>
-<P CLASS="Para">Select project JaneQUser2 in the Navigator view.</P>
+<P CLASS="Para">Select project JaneQuser2 in the Navigator view.</P>
   </li>
   <li>
 <P CLASS="Para">
