--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
@@ -47,8 +47,8 @@ the simple project we just created.&nbsp;
 </P>
 
 
-<P>Create a second project called JaneQUser2 using the same steps, but instead of
-clicking <b>Finish</b>, click <b>Next</b>. At this point you can specify other projects that project JaneQUser2
+<P>Create a second project called JaneQuser2 using the same steps, but instead of
+clicking <b>Finish</b>, click <b>Next</b>. At this point you can specify other projects that project JaneQuser2
 depends on. Since we want to create two independent projects we will not select
 any of the projects in the <b>Referenced projects</b> table. Click <b>Finish</b> to
 create your second simple project.
