--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
@@ -23,7 +23,7 @@ You can import files into the Workbench either by :</P>
 </ul>
 <p CLASS="Para">
 In this section we will import the two files we just exported and place them
-into our second project JaneQUser2.
+into our second project JaneQuser2.
 <br>
 </p>
 
