--- a/bundles/org.eclipse.jdt.doc.user/concepts/cquickfix.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cquickfix.htm
@@ -57,7 +57,7 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 			<td valign="top" align="left">
 			<ul>
 				<li>Create new constructor for references to constructors that can not be resolved (this, super or new class creation)</li>
-				<li>Reorder or remove arguments for constructor references that mismatch parameters of an existing constructor</li>
+				<li>Reorder or remove arguments for constructor references that mismatch parameters</li>
 				<li>Change method with constructor name to constructor (remove return type)</li>
 				<li>Change visibility for constructors that are accessed but not visible</li>
 				<li>Remove unused private constructor</li>
@@ -125,7 +125,7 @@ Left click on the light bulb or invoking Ctrl+1 (Edit / Quick Fix) brings up the
 
 
 
-<p>Quick Assist are proposals available even there is no error: There is no light bulb shown so the user has to know the available assists.</p>
+<p>Quick Assist are proposals available even if there is no problem or warning: There is no light bulb shown so the user has to know the available assists.</p>
 <table border="0" cellpadding="10" cellspacing="0" width="700">
 	<tbody>
 		<tr>
