*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-46ag.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-46ag.htm
@@ -22,17 +22,17 @@
     Resources</b> list, and click <b>OK</b>.</li>
 </ol>
 
-<p>The view displays the selected resource. Note that the view must have focus for the <B>Go To &gt; Resource</B> action to be enabled.</p>
+<p>The view displays the selected resource.</p>
 <p>
 If you want to open a particular resource in an editor rather than select
 it in a view, you can use the <b>Navigate &gt; Open Resource</b> action.
 This action presents the same dialog as the <b>Go To &gt; Resource</b> action,
 but immediately opens the matching resource for editing.
 </p>
-<p><em>Tip:</em>If the <b>Open Resource</b> and <b>Go To Resource</b>
+<p><em>Tip:</em>If the <b>Open Resource</b> and <b>Go To &gt; Resource</b>
 actions don't appear in your perspective, you can add them by selecting
 <b>Window &gt; Customize Perspective &gt; Other &gt; Resource Navigation</b>.
-By default, these actions only appear in certain perspectives.  The <b>Go To Resource</b>
+By default, these actions only appear in certain perspectives.  The <b>Go To &gt; Resource</b>
 action is only enabled when a view containing resources has focus.
 </p>
 
