Fixed width and height hints in images

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-AddMethod.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-AddMethod.htm
@@ -28,7 +28,7 @@
 		annotations in the editor's rulers are updated as you type. This behavior can be controlled via the preference page <strong>Java &gt; 
 		Editor &gt; Annotations</strong>.
 		<p>
-		<img src="../images/qs-13a.gif" alt="Error annotations in overview ruler">
+		<img src="../images/qs-13a.gif" width=428 height=222 alt="Error annotations in overview ruler">
 		</p>
 		
       </li>
@@ -37,7 +37,7 @@
         Package Explorer view, in the Tasks view and on the vertical ruler (left hand side of the editor). In the Package 
         Explorer view, the errors are propagated up to the project of the compilation unit containing the error.
 		<p>
-		<img src="../images/qs-14.gif" alt="Error propagation in package explorer">
+		<img src="../images/qs-14.gif" width=247 height=337 alt="Error propagation in package explorer">
 		</p>
       </li>
       <li>
