code assist argument names proposal

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -242,6 +242,38 @@
 			define your own templates to customize the resulting code.<br>
 			</td>
 		</tr>
+
+	<tr>
+     <td width="20%" valign="top" align="right"><b>Create your own templates</b></td>		
+     <td width="80%" valign="top">
+      <p>You can create your own templates. Go to the <b>Java &gt; Editor &gt; 
+        Templates</b> preference page and press the <b>New</b> button to create 
+        a template. For example, a template to iterate backwards in an array would 
+        look like this:</p>
+      <pre>for (int ${index} = ${array}.length - 1; ${index} &gt;= 0; ${index}--){
+   ${cursor}
+}</pre></td>
+</tr>
+    <tr>
+     <td width="20%" valign="top" align="right"><b>Code assist can insert argument names automatically</b></td>		
+     
+    <td width="80%" valign="top">
+      <p>You can have code assist insert argument names automatically on method 
+        completion. This behavior can be customized on the <b>Java > Editor > 
+        Code Assist</b> preference page (see the <b>Fill argument names on method 
+        completion</b> checkbox.) For example, when you select the second entry 
+        here:</p>
+      <p><img src="images/code-assist-argument-proposal.gif" alt="code assist window" width="466" height="104"></p>
+      <p>code assist will automatically insert argument names:</p>
+      <p><img src="images/code-assist-argument-proposal-inserted.gif" width="448" height="63" alt="code assist inserted argument names"></p>
+      <p>You can then use the <b>Tab</b> key to navigate between the insterted 
+        names.</p>
+      <p>Code assist can also guess filled argument names - basing on their declared 
+        types. This can be configured by the <b>Guess filled argument names</b> 
+        checkbox on the <b>Java > Editor > Code Assist</b> preference page.</p>
+    </td>
+	  
+    </tr>    
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Remove surrounding statement</b></td>
 			<td width="80%" valign="top">To remove a surrounding statement or block, position
