--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -383,8 +383,9 @@
       <p>You can have String literals wrapped when you edit them. For example, 
         if you have code like this:</p>
            <pre>String message= &quot;This is some long message.&quot;;</pre>
-           <p>position your caret after the &quot;some&quot; word and press Enter. 
-           The String literal will be automatically changed to:</p>
+           
+      <p>position your caret after the &quot;some&quot; word and press Enter. 
+        The code will be automatically changed to:</p>
            <pre>String message= &quot;This is some&quot; + 
            &quot; long message.&quot;;</pre>
            <p>This behavior can be customized in the <b>Java &gt; Editor &gt; Typing</b> 
