Spell check pass

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -27,7 +27,7 @@ plug-in referencing</a> technique.&nbsp;&nbsp; </P>
 
 <P > In this example, we have to navigate up two levels in the directory
 structure.&nbsp; The document with the
-active help link is located in the subdirectory <b>guide</b> underneath our
+active help link is located in the sub-directory <b>guide</b> underneath our
 plug-in directory.&nbsp; So we must navigate up one directory to reach our plug-in's
 root, and another level to reach the &quot;virtual&quot; location of all
 plug-ins.&nbsp;&nbsp; Then we can refer to the <b>org.eclipse.help</b> plug-in. </P>
