--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_nl.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_nl.htm
@@ -19,7 +19,7 @@ delivered in the original plug-in.</p>
 plug-in.&nbsp;&nbsp;</p>
 <ul>
   <li><b>Platform core mechanism</b> (the platform's runtime locale-specific
-    subdirectory search)</li>
+    sub-directory search)</li>
   <li><b>Java resource bundles</b> (java.util.ResourceBundle)</li>
 </ul>
 <p>It is important to understand which mechanism is used to access any given
@@ -33,7 +33,7 @@ following install tree shows a trivial (no code) plug-in with locale-specific
 translations of its <b>about.properties</b> file.&nbsp; The various translations
 are shown as coming from a plug-in fragment rather than the plug-in
 itself.&nbsp; This is typical for shipping translations separately from the
-base, but you could also place the <b>nl</b> subdirectory under the plug-in
+base, but you could also place the <b>nl</b> sub-directory under the plug-in
 itself.</p>
 <pre><font color="#4444CC">acmeweb/
   eclipse/
@@ -61,7 +61,7 @@ itself.</p>
             about.properties (German locale) </font></pre>
 <p>The files to be translated are not contained in JAR files.&nbsp; Each file
 should have exactly the same file name, but be located in subdirectories
-underneath the <b>nl</b> subdirectory in the fragment's (or plug-in's) root.</p>
+underneath the <b>nl</b> sub-directory in the fragment's (or plug-in's) root.</p>
 <p>Only the most specific file is accessed at runtime.&nbsp; The file paths are
 searched as part of the <a href="../reference/api/org/eclipse/core/runtime/IPluginDescriptor.html"><b>IPluginDescriptor.find</b></a><b>
 </b>and<b> <a href="../reference/api/org/eclipse/core/runtime/Plugin.html">Plugin.find</a>
