--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -16,7 +16,7 @@
  <h2>Menus</h2>
  <p>Most menus are assigned mnemonics for each entry which allow you to
  select them by typing the underlined letter instead of the mouse. You can also
- select an item by moving through the menus and submenus with the arrow keys. </p>
+ select an item by moving through the menus and sub-menus with the arrow keys. </p>
  <p>The various menus available can be accessed using the keyboard in the
  following ways: </p>
  <ul>
