--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-13.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-13.htm
@@ -33,7 +33,7 @@ in the file system to be deleted.  However, deleting child resources of linked f
 <em>will</em> cause them to be removed from the file system.
 </p>
 <p>
-Some plugins built on top of the Eclipse platform are not compatible with linked resources.
+Some plug-ins built on top of the Eclipse platform are not compatible with linked resources.
 If this is the case, you can completely disable the linked resource feature to prevent them
 from being created in your workspace.  Linked resources can be disabled from the 
 <b>Window &gt; Preferences &gt; Workbench &gt; Linked Resources</b> preference page.
