--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -26,7 +26,7 @@ or by using the Eclipse platform's own update manager. The Eclipse <em>update
 manager</em> can be used to discover, download, and install updated features and
 plug-ins from special web based Eclipse update sites.</p>
 <p>The basic underlying mechanism of the update manager is simple: the files for a feature or
-plug-in are always stored in a subdirectory whose name includes a version
+plug-in are always stored in a sub-directory whose name includes a version
 identifier (e.g., &quot;2.0.0&quot;). Different versions of a feature or plug-in
 are always given different version identifiers, thereby ensuring that the
 multiple versions of the same feature or plug-in can co-exist on
