--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-13.htm
@@ -19,10 +19,10 @@ in some mystical repository.&nbsp; Answering this question is easy.</p>
   </li>
   <li>
 <p CLASS="Para">Navigate to the location of where you installed the Workbench. You should see a
-subdirectory called &quot;workspace&quot;.&nbsp;</p>
+sub-directory called &quot;workspace&quot;.&nbsp;</p>
   </li>
   <li>
-<p CLASS="Para">If you look in the workspace subdirectory you will see the
+<p CLASS="Para">If you look in the workspace sub-directory you will see the
 projects, folders and files that we created. </p>
   </li>
 </ol>
