--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
@@ -22,7 +22,7 @@ Close any editors that are open on JanesINIFile.ini.</P>
   <li>
 <P CLASS="Para">
 In your file system explorer, navigate to the directory where you installed the
-Workbench and go into the workspace subdirectory.</P>
+Workbench and go into the workspace sub-directory.</P>
   </li>
   <li>
 <P CLASS="Para">
