--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
@@ -12,7 +12,7 @@
 Moving</h3>
 <p CLASS="Head">We have copied and renamed several of our resources. Now it's
 time to move some resources around. We will move our JanesOtherFolder and
-its file to be a subfolder of our original folder JanesFolder.</p>
+its file to be a sub-folder of our original folder JanesFolder.</p>
 <ol>
   <li>In the Navigator view, select JanesOtherFolder. </li>
   <li>
