--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_files.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_files.htm
@@ -19,11 +19,11 @@ main difference to you as a plug-in developer is that you have a little more
 flexibility in the way you structure your files and specify your links. </P>
 <P >
 Documentation can be delivered in a zip file, avoiding problems that may result when a large number of files are present. In our example
-plug-in, we created a subdirectory called <b>html</b>.&nbsp;
+plug-in, we created a sub-directory called <b>html</b>.&nbsp;
 Alternatively, we could have placed our html files into a zip file called
 <b>doc.zip</b>.&nbsp; This zip file must mimic the file
 structure underneath the plug-in directory.&nbsp; In our case, it must contain
-the subdirectory <b>html</b> and all the contents
+the sub-directory <b>html</b> and all the contents
 underneath <b>html</b>.&nbsp; </P>
 <P >When resolving file names, the help server looks in the <b>doc.zip</b>
 file for documents before it looks in the plug-in directory itself.&nbsp; When used as a link, the argument in an
@@ -38,7 +38,7 @@ file for documents before it looks in the plug-in directory itself.&nbsp; When u
 
 <ul>
   <li>look in <b> doc.zip</b> for the file <b>/html/ref/ref1.html</b></li>
-  <li>look for the file <b>ref1.html</b> in the <b>/html/ref </b>subdirectory structure underneath the plug-in
+  <li>look for the file <b>ref1.html</b> in the <b>/html/ref </b>sub-directory structure underneath the plug-in
     directory.</li>
 </ul>
 <P >A fully qualified link can be used to refer to any content on the web.&nbsp; </P>
